# Project-2

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: customer_dim.csv  df_ML1.csv  df_ML2.csv  df_ML2_conf_matrix.csv  geo_dim.csv  order_dim.csv  product_dim.csv
data/ML/: df_ML1.csv  df_ML2.csv  df_ML2_conf_matrix.csv
data/cleanized/: customer_dim.csv  date_dim.csv  order_dim.csv  product_dim.csv
data/statistics/: discounted.csv  ttest.csv  undiscounted.csv
notebooks/: ML.ipynb  ML2.ipynb  cleanizers.ipynb  returned_orders.ipynb  statistics.ipynb  stats.ipynb
scripts/: ML.ipynb  ML2.ipynb  store_cleanized_data.py
src/superstore/: consts.py
src/superstore/cleanizers/: core.py  customer_dim.py  geo_dim.py  order_dim.py  product_dim.py
src/superstore/statistics/: discount.py
