[project]
name = "superstore"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.6"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build.system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"